TEST_ONLY: Disable dp-controller node
Allows to use simplefb rather than exynos drm.

Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -63,7 +63,7 @@
 };
 
 &dp {
-	status = "okay";
+	status = "disabled";
 	pinctrl-names = "default";
 	pinctrl-0 = <&dp_hpd>;
 	samsung,color-space = <0>;
