TEST_ONLY: Disable dp-controller, lvds-bridge, panel
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -63,11 +63,12 @@
 
 	panel: panel {
 		compatible = "chunghwa,claa101wb01";
+		status = "disabled";
 	};
 };
 
 &dp {
-	status = "okay";
+	status = "disabled";
 	pinctrl-names = "default";
 	pinctrl-0 = <&dp_hpd>;
 	samsung,color-space = <0>;
@@ -396,6 +397,7 @@
 		panel = <&panel>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&ps8622_gpios>;
+		status = "disabled";
 	};
 };
 
