Revert "TEST_ONLY: Disable dp-controller, lvds-bridge, panel"

--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -63,12 +63,11 @@
 
 	panel: panel {
 		compatible = "chunghwa,claa101wb01";
-		status = "disabled";
 	};
 };
 
 &dp {
-	status = "disabled";
+	status = "okay";
 	pinctrl-names = "default";
 	pinctrl-0 = <&dp_hpd>;
 	samsung,color-space = <0>;
@@ -413,7 +412,6 @@
 		panel = <&panel>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&ps8622_gpios>;
-		status = "disabled";
 	};
 };
 
